test/files/run/t8918-unary-ids.check

scala> val - = 42
val -: Int = 42

scala> val i = -
val i: Int = 42

scala> - { 42 }
val res0: Int = -42

scala> - if (true) 1 else 2
         ^
       error: illegal start of simple expression

scala> - - 1
           ^
       error: ';' expected but integer literal found.

scala> -.-(1)
val res1: Int = 41

scala> -
val res2: Int = 42

scala> - -
val res3: Int = -42

scala> + -
val res4: Int = 42

scala> object X { def -(i: Int) = 42 - i ; def f(g: Int => Int) = g(7) ; def j = f(-) }
object X

scala> X.j
val res5: Int = 35

scala> :quit
